--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
    
-    <title>Flipkart Clone By Neeraj</title>
+    <title>Flipkart Clone By Gulveer Singh</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
